<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnCreateGame"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="100dp"
                android:onClick="onClickMainPage"
                android:text="@string/create_game" />

            <Button
                android:id="@+id/btnJoinGame"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:onClick="onClickMainPage"
                android:text="@string/join_game" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="100dp"
                android:onClick="onClickMainPage"
                android:text="@string/my_profile" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="100dp"
                android:onClick="onClickMainPage"
                android:text="@string/log_out" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>